<resources>
    <string name="app_name">TeleCam</string>
    <string name="app_description">TeleCam is a Social Media App for Android</string>
    <string name="app_version">1.0</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_to_telecam_register">New to TeleCam? Register</string>
    <string name="login">LOGIN</string>
    <string name="logo_image">Logo Image</string>
    <string name="icon_image">Icon Image</string>
    <string name="inbox_image">Inbox Image</string>
    <string name="post">POST</string>
    <string name="post_description">Description...</string>
    <string name="tag">#tag</string>
    <string name="_123_posts">123 posts</string>
    <string name="post_image">Post Image</string>
    <string name="save_icon">Save Icon</string>
    <string name="comment_icon">Comment Icon</string>
    <string name="like_icon">Like Icon</string>
    <string name="posted_image">Posted Image</string>
    <string name="more_icon">More Icon</string>
    <string name="saved_pictures">Saved Pictures</string>
    <string name="my_media">My Media</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="posts">POSTS</string>
    <string name="more_options_icon">More Options Icon</string>
    <string name="description">Description...</string>
    <string name="image_added">Image Added</string>
    <string name="close_icon">Close Icon</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="this_is_a_comment">This is a comment</string>
    <string name="log_out_icon">Log Out Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="save">SAVE</string>
    <string name="enter_new_details">Enter New Details</string>
    <string name="bio">Bio</string>
    <string name="change_photo">Change Photo</string>
    <string name="badges">Badges</string>
    <string name="beginner_badge">Beginner Badge</string>
    <string name="leader_badge">Leader Badge</string>
    <string name="master_badge">Master Badge</string>
    <string name="hero_badge">Hero Badge</string>
    <string name="legend_badge">Legend Badge</string>
    <string name="back">Back</string>
    <string name="search_icon">Search Icon</string>
    <string name="help">Help</string>
    <string name="help_icon">Help Icon</string>
    <string name="feedback_icon">Feedback Icon</string>
    <string name="feedback">Feedback</string>
    <string name="select_image">Select Image</string>
    <string name="confirm_password">Confirm Password</string>

</resources>