<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/username"
            android:textColor="@color/colorBlack" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/full_name"
            android:textColor="@color/colorBlack" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/email"
            android:textColor="@color/colorBlack" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:orientation="horizontal"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:orientation="horizontal"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgound_edit_text"
        android:padding="10dp"
        android:text="@string/register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/colorBlack"
        android:textSize="11sp" />

</LinearLayout>